[package]
name = "gh_backup"
authors = ["Alex Rutar <alex@rutar.org>"]
description = "An automated GitHub backup tool."
homepage = "https://github.com/alexrutar/gh_backup"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["process", "macros", "rt"] }
xdg = "2.5.2"
